add css to table  using selectors

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
             voluptates aliquid totam distinctio aut obcaecati non a nemo nulla, nisi optio veniam consequuntur deserunt
             perspiciatis. Dolores?</p>
           <div>
-            <table>
+            <table class="tbl-schedule">
               <thead>
                 <tr>
-                  <th colspan="2">Time</th>
+                  <th class="th-dwn-border" colspan="2">Time</th>
                   <th rowspan="2">Task</th>
                 </tr>
                 <tr>
