remove html-img-value: height

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             tenetur tempore.</p>
           <figure>
             <!-- GALLERY -->
-            <img src="img/gallery-a.jpg" alt="Three baked breads" height="300" />
+            <img src="img/gallery-a.jpg" alt="Three baked breads" />
           </figure>
         </section>
         <section class="mar-bger-section ">
@@ -127,8 +127,7 @@
                 <figure>
                   <img srcset="img/mixing-ingredients-480w.jpg 480w,
                 img/mixing-ingredients-960w.jpg 960w,
-                img/mixing-ingredients-1920w.jpg 1920w" src="img/mixing-ingredients-480w.jpg" alt="A shaggy dough"
-                    height="400" />
+                img/mixing-ingredients-1920w.jpg 1920w" src="img/mixing-ingredients-480w.jpg" alt="A shaggy dough" />
                   <figcaption class="cption">A shaggy dough</figcaption>
                 </figure>
               </li>
@@ -144,7 +143,7 @@
                 <figure>
                   <img
                     srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960, img/folding-dough-1920w.jpg 1920w"
-                    src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" height="400" />
+                    src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" />
                   <figcaption class="cption">Folding the dough, instead of kneading</figcaption>
                 </figure>
               </li>
@@ -156,7 +155,7 @@
                   Doloribus vel ex ab.</p>
                 <figure>
                   <img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960, img/proofing-1920w.jpg 1920w"
-                    src="img/proofing-480w.jpg" alt="Dough dusted with flour, ready to sit and proof" height="400" />
+                    src="img/proofing-480w.jpg" alt="Dough dusted with flour, ready to sit and proof" />
                   <figcaption class="cption">Dough dusted with flour, ready to sit and proof</figcaption>
                 </figure>
               </li>
@@ -169,7 +168,7 @@
                 <figure>
                   <img
                     srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960, img/baked-baguettes-1920w.jpg 1920w"
-                    src="img/baked-baguettes-480w.jpg" alt="Delicious baked bagettes, cut and stacked" height="400" />
+                    src="img/baked-baguettes-480w.jpg" alt="Delicious baked bagettes, cut and stacked" />
                   <figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
                 </figure>
               </li>
@@ -239,7 +238,7 @@
           <figure>
             <img
               srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960, img/ready-to-eat-1920w.jpg 1920w"
-              src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" height="400" />
+              src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" />
             <figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
           </figure>
           <p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo, modi exercitationem
