Add page description. style table

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/brands.min.css">
+  <title>The Best Delicous No-Knead Baguettes | Homey Chef /title>
+    <meta name="description"
+      content="Exceptionally delicious no-knead baguettes that work great for any breakfast. Follow this super easy recipe to make crispy and flavorful no-knead baguettes that will add unforgettable flavor to your breakfast.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/brands.min.css">
 
 </head>
 
@@ -63,17 +64,14 @@
             vero architecto nobis nam! Soluta ducimus at pariatur aspernatur molestiae asperiores sequi alias natus
             iste?
           </p>
-          <article class="left-border">
-
+          <article class="art-left-border">
             <blockquote class="bq-pem">
               <p>Poetry is and act of peace. Peace goes into making of a poem as flour goes into the
                 making of bread.
               </p>
             </blockquote>
             <footer class="bq-pem"><cite>Pablo Neruda</cite></footer>
-
           </article>
-
           <p class="all-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi odio enim corrupti,
             maiores aliquam
             fuga
