add footer and style it

--- a/index.html
+++ b/index.html
@@ -253,25 +253,32 @@
       </main>
     </div>
     <div class="container bg-footer-secion">
-      <footer>
-        <div class="row">
-          <div class="col-1">
-            <p>Copyright &copy;1970</p>
-            <ul>
-              <li><a href="">Terms</a></li>
-              <li>|</li>
-              <li><a href="">Privacy</a></li>
-            </ul>
-          </div>
-          <div class="col-2">
-            <ul>
-              <li>FB</li>
-              <li>TW</li>
-              <li>INS</li>
-            </ul>
+
+      <footer class="mainparent">
+        <div class="mainchild">
+          <div class="parent-left-col">
+            <div class="left-child-lvl2">
+              <p>Copyright &copy;1970.</p>
+            </div>
+            <div class="left-child-lvl2">
+              <ul class="parent-term-priv">
+                <li><a href="">Terms</a></li>
+                <li>|</li>
+                <li><a href="">Privacy</a></li>
+              </ul>
+            </div>
           </div>
         </div>
 
+
+        <div class="mainchild">
+
+          <ul class="parent-right-row">
+            <li>FB</li>
+            <li>TW</li>
+            <li>INS</li>
+          </ul>
+        </div>
       </footer>
     </div>
   </article>
