--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/brands.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -296,9 +297,12 @@
 				</div>
 				<div class="mainchild">
 					<ul class="parent-right-row">
-						<li>FB</li>
-						<li>TW</li>
-						<li>INS</li>
+
+
+						<li><a class="fa fa-facebook" href="https://www.facebook.com"></a></li>
+						<li><a class="fa fa-twitter" href="https://twitter.com"></a></li>
+						<li><a class="fa fa-instagram" href="https://www.instagram.com/"></a></li>
+
 					</ul>
 				</div>
 			</div>
