add radius align content header,

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<article class="container">
-		<header class="bg-theme-section padd-section">
+		<header class="bg-theme-section padd-hder-section">
 			<section class="mar-bger-section">
 				<a href="" class="a-f-baking"> Baking</a>
 				<h1 class="main-heading"> Delicious No-Knead Baguettes</h1>
@@ -24,7 +24,10 @@
 					using
 					a
 					<i>simple </i><a class="f-yellow" href="">folding
-						technique</a>, instead of labor-intensive kneading
+						technique</a>, instead of labor-intensive kneading. Follow this super easy recipe to make crispy
+					and flavorful
+					no-knead baguettes that will add unforgettable flavor to your breakfast
+
 				</p>
 			</section>
 			<section class="">
