arrange theme color, add img header, style list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<article class="container">
-		<header class="bg-theme-section padd-hder-section">
+		<header class="bg-hder-section padd-hder-section">
 			<section class="mar-bger-section">
 				<a href="" class="a-f-baking"> Baking</a>
 				<h1 class="main-heading"> Delicious No-Knead Baguettes</h1>
@@ -51,7 +51,7 @@
 				</ul>
 			</section>
 		</header>
-		<nav class="bg-nav-section padd-section">
+		<nav class="bg-theme-section padd-section">
 			<ul class="ul-menu-parent mar-bger-section">
 				<li><a class="" href="#Story">Story</a></li>
 				<li><a class="" href="#Ingredients">Ingredients</a></li>
@@ -113,22 +113,22 @@
 
 				<div>
 					<ul class="deco mar-list">
-						<li><b class="bold">500 <abbr title="Grams">g</abbr></b> bread flour</li>
-						<li><b class="bold">400 <abbr title="Grams">g</abbr></b> cool water</li>
-						<li><b class="bold">10 <abbr title="Grams">g</abbr></b> salt</li>
-						<li><b class="bold">7.5 <abbr title="Grams">g</abbr></b> yeast</li>
-						<li>Extra flour (for dusting)</li>
+						<li><b class="bold">500 <abbr title="Grams">g</abbr></b><span>bread flour </span></li>
+						<li><b class="bold">400 <abbr title="Grams">g</abbr></b><span>cool water</span></li>
+						<li><b class="bold">10 <abbr title="Grams">g</abbr></b><span>salt</span></li>
+						<li><b class="bold">7.5 <abbr title="Grams">g</abbr></b><span>yeast</span></li>
+						<li><span>Extra flour (for dusting)</span></li>
 					</ul>
 				</div>
 			</section>
 			<section class="mar-bger-section ">
 				<h2 id="Equipment" class="f-all-topics f-topic">Equipment</h2>
 				<ul class="deco mar-list">
-					<li>Large bowl</li>
-					<li>Plastic wrap</li>
-					<li>Baaking sheet</li>
-					<li>Bench scraper</li>
-					<li>Thermometer</li>
+					<li><span>Large bowl</span></li>
+					<li><span>Plastic wrap</span></li>
+					<li><span>Baaking sheet</span></li>
+					<li><span>Bench scraper</span></li>
+					<li><span>Thermometer</span></li>
 				</ul>
 			</section>
 			<section class="mar-bger-section">
@@ -291,7 +291,7 @@
 
 
 
-		<footer class="bg-theme-section padd-section">
+		<footer class="bg-theme2-section padd-section">
 			<div class="mainparent mar-bger-section">
 				<div class="mainchild">
 					<div class="parent-left-col">
