add resposive footer, add margin menu

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</ul>
 			</section>
 		</header>
-		<nav class="bg-theme-section padd-section">
+		<nav class="bg-theme2-section padd-section">
 			<ul class="ul-menu-parent mar-bger-section">
 				<li><a class="" href="#Story">Story</a></li>
 				<li><a class="" href="#Ingredients">Ingredients</a></li>
@@ -301,7 +301,7 @@
 						<div class="left-child-lvl2">
 							<ul class="parent-term-priv">
 								<li><a href="">Terms</a></li>
-								<li>|</li>
+								<li><b class="bold">|</b></li>
 								<li><a href="">Privacy</a></li>
 							</ul>
 						</div>
@@ -309,8 +309,6 @@
 				</div>
 				<div class="mainchild">
 					<ul class="parent-right-row">
-
-
 						<li><a class="fa fa-facebook" href="https://www.facebook.com"></a></li>
 						<li><a class="fa fa-twitter" href="https://twitter.com"></a></li>
 						<li><a class="fa fa-instagram" href="https://www.instagram.com/"></a></li>
