Remove .sw-over, Add Start .switch,  width .toggle

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			</section>
 		</header>
 		<nav class="bg-theme2-section padd-section">
+
 			<ul class="ul-menu-parent mar-bger-section">
 				<li><a class="" href="#Story">Story</a></li>
 				<li><a class="" href="#Ingredients">Ingredients</a></li>
@@ -60,6 +61,7 @@
 				<li><a class="" href="#Schedule">Schedule</a></li>
 				<li><a class="" href="#Result">Result</a></li>
 			</ul>
+
 		</nav>
 		<main class="bg-main-section padd-section">
 			<section>
@@ -103,11 +105,11 @@
 				<h2 id="Ingredients" class="f-all-topics f-topic">Ingredients</h2>
 
 				<input type="checkbox" class="chbox" id="chbox">
-				<div class="layout">
+				<div class="toggle-layout">
 					<label for="chbox" class="toggle">
 						<label class="sw-left">grams</label>
 						<label class="sw-right">lb, oz</label>
-						<div class="switch sw-over"></div>
+						<div class="switch"></div>
 					</label>
 				</div>
 
