add class to hightlight text

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
 								tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo rerum
 								odio quisquam?
 								Doloribus vel ex ab.</p>
-							<p class="all-p">Be sure to <em>let your dough sit for about 20-30 minutes between
+							<p class="all-p">Be sure to <em class="bold h-light">let your dough sit for about 20-30
+									minutes
+									between
 									folds</em>, to ensure
 								the gluten
 								structure has a chance to develop before being disturbed again.</p>
