--- a/index.html
+++ b/index.html
@@ -51,20 +51,19 @@
 				</ul>
 			</section>
 		</header>
-		<nav class="bg-theme2-section padd-section">
 
-			<ul class="ul-menu-parent mar-bger-section">
-				<li><a class="" href="#Story">Story</a></li>
-				<li><a class="" href="#Ingredients">Ingredients</a></li>
-				<li><a class="" href="#Equipment">Equipment</a></li>
-				<li><a class="" href="#Process">Process</a></li>
-				<li><a class="" href="#Schedule">Schedule</a></li>
-				<li><a class="" href="#Result">Result</a></li>
-			</ul>
-
-		</nav>
-		<main class="bg-main-section padd-section">
-			<section>
+		<main class="bg-main-section padd-main-layout">
+			<nav class="navigator bg-theme2-section padd-section">
+				<ul class="ul-menu-parent mar-bger-section">
+					<li><a class="" href="#Story">Story</a></li>
+					<li><a class="" href="#Ingredients">Ingredients</a></li>
+					<li><a class="" href="#Equipment">Equipment</a></li>
+					<li><a class="" href="#Process">Process</a></li>
+					<li><a class="" href="#Schedule">Schedule</a></li>
+					<li><a class="" href="#Result">Result</a></li>
+				</ul>
+			</nav>
+			<section class="main-content padd-section">
 				<h2 id="Story" class="f-all-topics f-topic">Story</h2>
 				<p class="all-p">Lorem ipsum, <a class="f-yellow" href="">delicious bread</a> dolor sit amet consectetur
 					adipisicing elit.
@@ -94,233 +93,246 @@
 					nesciunt
 					tenetur tempore.</p>
 				<figure>
-					<!-- GALLERY -->
+
 					<img src="img/gallery-a.jpg" alt="Three baked breads" />
 				</figure>
 			</section>
-			<section class="mar-bger-section ">
+			<div class="side-bar padd-section">
+				<section class="mar-bger-section ">
+					<h2 id="Ingredients" class="fc-main-topic2 f-topic">Ingredients</h2>
+					<input type="checkbox" class="chbox" id="chbox">
+					<div class="toggle-layout">
+						<label for="chbox" class="toggle">
+							<label class="sw-left">grams</label>
+							<label class="sw-right">lb, oz</label>
+							<div class="switch"></div>
+						</label>
+					</div>
 
-
-
-				<h2 id="Ingredients" class="f-all-topics f-topic">Ingredients</h2>
-
-				<input type="checkbox" class="chbox" id="chbox">
-				<div class="toggle-layout">
-					<label for="chbox" class="toggle">
-						<label class="sw-left">grams</label>
-						<label class="sw-right">lb, oz</label>
-						<div class="switch"></div>
-					</label>
-				</div>
-
-				<div>
+					<div>
+						<ul class="deco mar-list">
+							<li><b class="bold">500 <abbr title="Grams">g</abbr></b><span>bread flour </span></li>
+							<li><b class="bold">400 <abbr title="Grams">g</abbr></b><span>cool water</span></li>
+							<li><b class="bold">10 <abbr title="Grams">g</abbr></b><span>salt</span></li>
+							<li><b class="bold">7.5 <abbr title="Grams">g</abbr></b><span>yeast</span></li>
+							<li><span>Extra flour (for dusting)</span></li>
+						</ul>
+					</div>
+				</section>
+				<section class="mar-bger-section ">
+					<h2 id="Equipment" class="fc-main-topic2 f-topic">Equipment</h2>
 					<ul class="deco mar-list">
-						<li><b class="bold">500 <abbr title="Grams">g</abbr></b><span>bread flour </span></li>
-						<li><b class="bold">400 <abbr title="Grams">g</abbr></b><span>cool water</span></li>
-						<li><b class="bold">10 <abbr title="Grams">g</abbr></b><span>salt</span></li>
-						<li><b class="bold">7.5 <abbr title="Grams">g</abbr></b><span>yeast</span></li>
-						<li><span>Extra flour (for dusting)</span></li>
+						<li><span>Large bowl</span></li>
+						<li><span>Plastic wrap</span></li>
+						<li><span>Baaking sheet</span></li>
+						<li><span>Bench scraper</span></li>
+						<li><span>Thermometer</span></li>
 					</ul>
-				</div>
-			</section>
-			<section class="mar-bger-section ">
-				<h2 id="Equipment" class="f-all-topics f-topic">Equipment</h2>
-				<ul class="deco mar-list">
-					<li><span>Large bowl</span></li>
-					<li><span>Plastic wrap</span></li>
-					<li><span>Baaking sheet</span></li>
-					<li><span>Bench scraper</span></li>
-					<li><span>Thermometer</span></li>
-				</ul>
-			</section>
-			<section class="mar-bger-section">
-				<h2 id="Process" class="f-all-topics f-topic">Process</h2>
-				<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit amet accusantium
-					officia?
-					Dolore optio
-					inventore non voluptas ex placeat officia omnis? Consequuntur error officiis deleniti, ab odio fugit
-					dolor
-					porro!</p>
-				<div>
-					<ol class="steps">
-						<li>
-							<h3 class="f-subtopic f-all-topics">Mixing</h3>
-							<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-								commodi!
-								Voluptates sit ipsum
-								tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo rerum
-								odio quisquam?
-								Doloribus vel ex ab.</p>
-							<figure>
-								<img srcset="img/mixing-ingredients-480w.jpg 480w,
+				</section>
+			</div>
+			<div class="main-content padd-section">
+				<section class="mar-bger-section">
+					<h2 id="Process" class="f-all-topics f-topic">Process</h2>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit amet accusantium
+						officia?
+						Dolore optio
+						inventore non voluptas ex placeat officia omnis? Consequuntur error officiis deleniti, ab odio
+						fugit
+						dolor
+						porro!</p>
+					<div>
+						<ol class="steps">
+							<li>
+								<h3 class="f-subtopic f-all-topics">Mixing</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/mixing-ingredients-480w.jpg 480w,
                 img/mixing-ingredients-960w.jpg 960w,
                 img/mixing-ingredients-1920w.jpg 1920w" src="img/mixing-ingredients-480w.jpg" alt="A shaggy dough" />
-								<figcaption class="cption">A shaggy dough</figcaption>
-							</figure>
-						</li>
-						<li>
-							<h3 class="f-subtopic f-all-topics">Folding</h3>
-							<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-								commodi!
-								Voluptates sit ipsum
-								tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo rerum
-								odio quisquam?
-								Doloribus vel ex ab.</p>
-							<p class="all-p">Be sure to <em class="bold h-light">let your dough sit for about 20-30
-									minutes
-									between
-									folds</em>, to ensure
-								the gluten
-								structure has a chance to develop before being disturbed again.</p>
-							<figure>
-								<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960, img/folding-dough-1920w.jpg 1920w"
-									src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" />
-								<figcaption class="cption">Folding the dough, instead of kneading</figcaption>
-							</figure>
-						</li>
-						<li>
-							<h3 class="f-subtopic f-all-topics">Proofing</h3>
-							<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-								commodi!
-								Voluptates sit ipsum
-								tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo rerum
-								odio quisquam?
-								Doloribus vel ex ab.</p>
-							<figure>
-								<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960, img/proofing-1920w.jpg 1920w"
-									src="img/proofing-480w.jpg" alt="Dough dusted with flour, ready to sit and proof" />
-								<figcaption class="cption">Dough dusted with flour, ready to sit and proof</figcaption>
-							</figure>
-						</li>
-						<li>
-							<h3 class="f-subtopic f-all-topics">Baking</h3>
-							<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
-								commodi!
-								Voluptates sit ipsum
-								tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo rerum
-								odio quisquam?
-								Doloribus vel ex ab.</p>
-							<figure>
-								<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960, img/baked-baguettes-1920w.jpg 1920w"
-									src="img/baked-baguettes-480w.jpg"
-									alt="Delicious baked bagettes, cut and stacked" />
-								<figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
-							</figure>
-						</li>
-					</ol>
+									<figcaption class="cption">A shaggy dough</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Folding</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<p class="all-p">Be sure to <em class="bold h-light">let your dough sit for about 20-30
+										minutes
+										between
+										folds</em>, to ensure
+									the gluten
+									structure has a chance to develop before being disturbed again.</p>
+								<figure>
+									<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960, img/folding-dough-1920w.jpg 1920w"
+										src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" />
+									<figcaption class="cption">Folding the dough, instead of kneading</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Proofing</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960, img/proofing-1920w.jpg 1920w"
+										src="img/proofing-480w.jpg"
+										alt="Dough dusted with flour, ready to sit and proof" />
+									<figcaption class="cption">Dough dusted with flour, ready to sit and proof
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Baking</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960, img/baked-baguettes-1920w.jpg 1920w"
+										src="img/baked-baguettes-480w.jpg"
+										alt="Delicious baked bagettes, cut and stacked" />
+									<figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
+								</figure>
+							</li>
+						</ol>
+					</div>
+				</section>
+				<section class="mar-bger-section">
+					<h2 id="Schedule" class="f-all-topics f-topic">Schedule</h2>
+					<p class="all-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae repudiandae
+						labore
+						nostrum aspernatur
+						voluptates aliquid totam distinctio aut obcaecati non a nemo nulla, nisi optio veniam
+						consequuntur
+						deserunt
+						perspiciatis. Dolores?</p>
+					<div>
+						<table class="tbl-schedule">
+							<thead>
+								<tr>
+									<th class="th-dwn-border" colspan="2">Time</th>
+									<th rowspan="2">Task</th>
+								</tr>
+								<tr>
+									<th>Start</th>
+									<th>Duration</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>0:00</td>
+									<td>(20 <abbr title="Minutes">min</abbr>)</td>
+									<td>Mix ingredients</td>
+								</tr>
+								<tr>
+									<td>0:20</td>
+									<td>(100 <abbr title="Minutes">min</abbr>)</td>
+									<td>Bulk rise</td>
+								</tr>
+								<tr>
+									<td>2:00</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Fold &amp; rest</td>
+								</tr>
+								<tr>
+									<td>2:30</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Fold &amp; rest</td>
+								</tr>
+								<tr>
+									<td>3:00</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Proof</td>
+								</tr>
+								<tr>
+									<td>3:30</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Bake</td>
+								</tr>
+							</tbody>
+						</table>
+						<caption> <span class="cption">Sample baking schedule </span> </caption>
+					</div>
+				</section>
+				<section class="mar-bger-section">
+					<h2 id="Result" class="f-all-topics f-topic">Result</h2>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit deleniti debitis
+						dolorum,
+						repellat hic
+						veritatis illo optio soluta, provident tempore perferendis natus quia consectetur libero facere
+						doloribus,
+						impedit nobis. Quod.</p>
+					<figure>
+						<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960, img/ready-to-eat-1920w.jpg 1920w"
+							src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" />
+						<figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
+					</figure>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo, modi
+						exercitationem
+						nemo placeat in,
+						enim maxime, repudiandae laboriosam eos mollitia. Temporibus voluptatum cumque sed eveniet
+						assumenda
+						quae a
+						qui!</p>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum accusamus suscipit
+						tempora
+						adipisci quo sunt
+						libero ab nesciunt labore similique dignissimos, tempore assumenda neque quibusdam. Repellat
+						eveniet
+						qui
+						recusandae mollitia?</p>
+				</section>
+			</div>
+			<footer class="footer bg-theme2-section padd-section">
+				<div class="mainparent mar-bger-section">
+					<div class="mainchild">
+						<div class="parent-left-col">
+							<div class="left-child-lvl2">
+								<p>Copyright &copy;1970.</p>
+							</div>
+							<div class="left-child-lvl2">
+								<ul class="parent-term-priv">
+									<li><a href="">Terms</a></li>
+									<li><b class="bold">|</b></li>
+									<li><a href="">Privacy</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="mainchild">
+						<ul class="parent-right-row">
+							<li><a class="fa fa-facebook" href="https://www.facebook.com"></a></li>
+							<li><a class="fa fa-twitter" href="https://twitter.com"></a></li>
+							<li><a class="fa fa-instagram" href="https://www.instagram.com/"></a></li>
+
+						</ul>
+					</div>
 				</div>
-			</section>
-			<section class="mar-bger-section">
-				<h2 id="Schedule" class="f-all-topics f-topic">Schedule</h2>
-				<p class="all-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae repudiandae labore
-					nostrum aspernatur
-					voluptates aliquid totam distinctio aut obcaecati non a nemo nulla, nisi optio veniam consequuntur
-					deserunt
-					perspiciatis. Dolores?</p>
-				<div>
-					<table class="tbl-schedule">
-						<thead>
-							<tr>
-								<th class="th-dwn-border" colspan="2">Time</th>
-								<th rowspan="2">Task</th>
-							</tr>
-							<tr>
-								<th>Start</th>
-								<th>Duration</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>0:00</td>
-								<td>(20 <abbr title="Minutes">min</abbr>)</td>
-								<td>Mix ingredients</td>
-							</tr>
-							<tr>
-								<td>0:20</td>
-								<td>(100 <abbr title="Minutes">min</abbr>)</td>
-								<td>Bulk rise</td>
-							</tr>
-							<tr>
-								<td>2:00</td>
-								<td>(30 <abbr title="Minutes">min</abbr>)</td>
-								<td>Fold &amp; rest</td>
-							</tr>
-							<tr>
-								<td>2:30</td>
-								<td>(30 <abbr title="Minutes">min</abbr>)</td>
-								<td>Fold &amp; rest</td>
-							</tr>
-							<tr>
-								<td>3:00</td>
-								<td>(30 <abbr title="Minutes">min</abbr>)</td>
-								<td>Proof</td>
-							</tr>
-							<tr>
-								<td>3:30</td>
-								<td>(30 <abbr title="Minutes">min</abbr>)</td>
-								<td>Bake</td>
-							</tr>
-						</tbody>
-					</table>
-					<caption> <span class="cption">Sample baking schedule </span> </caption>
-				</div>
-			</section>
-			<section class="mar-bger-section">
-				<h2 id="Result" class="f-all-topics f-topic">Result</h2>
-				<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit deleniti debitis
-					dolorum,
-					repellat hic
-					veritatis illo optio soluta, provident tempore perferendis natus quia consectetur libero facere
-					doloribus,
-					impedit nobis. Quod.</p>
-				<figure>
-					<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960, img/ready-to-eat-1920w.jpg 1920w"
-						src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" />
-					<figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
-				</figure>
-				<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo, modi
-					exercitationem
-					nemo placeat in,
-					enim maxime, repudiandae laboriosam eos mollitia. Temporibus voluptatum cumque sed eveniet assumenda
-					quae a
-					qui!</p>
-				<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum accusamus suscipit
-					tempora
-					adipisci quo sunt
-					libero ab nesciunt labore similique dignissimos, tempore assumenda neque quibusdam. Repellat eveniet
-					qui
-					recusandae mollitia?</p>
-			</section>
+			</footer>
+
 		</main>
 
 
 
-		<footer class="bg-theme2-section padd-section">
-			<div class="mainparent mar-bger-section">
-				<div class="mainchild">
-					<div class="parent-left-col">
-						<div class="left-child-lvl2">
-							<p>Copyright &copy;1970.</p>
-						</div>
-						<div class="left-child-lvl2">
-							<ul class="parent-term-priv">
-								<li><a href="">Terms</a></li>
-								<li><b class="bold">|</b></li>
-								<li><a href="">Privacy</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="mainchild">
-					<ul class="parent-right-row">
-						<li><a class="fa fa-facebook" href="https://www.facebook.com"></a></li>
-						<li><a class="fa fa-twitter" href="https://twitter.com"></a></li>
-						<li><a class="fa fa-instagram" href="https://www.instagram.com/"></a></li>
 
-					</ul>
-				</div>
-			</div>
-		</footer>
 	</article>
 </body>
 
