Edit footerbk-ground, menu margin, hovers and shadows

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 						recusandae mollitia?</p>
 				</section>
 			</div>
-			<footer class="footer bg-theme2-section padd-section">
+			<footer class="footer bg-theme-section padd-section">
 				<div class="mainparent mar-bger-section">
 					<div class="mainchild">
 						<div class="parent-left-col">
