--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<header class="bg-theme2-section padd-hder-section">
 			<div class="bg-hder-section padd-hder2-section">
 				<section class="mar-bger-section">
-					<a href="" class="a-f-baking"> Baking</a>
+					<a href="./" class="a-f-baking"> Baking</a>
 					<h1 class="main-heading"> Delicious No-Knead Baguettes</h1>
 					<p class="main-pgraph"> Make three <strong class="white-strong">fluffy and delicious
 							Baguettes</strong>,
