arrange css classes

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
 				</section>
 			</div>
 			<footer class="footer bg-theme-section padd-section">
-				<div class="mainparent mar-bger-section">
-					<div class="mainchild">
+				<div class="fter-mainparent mar-bger-section">
+					<div class="fter-mainchild">
 						<div class="parent-left-col">
 							<div class="left-child-lvl2">
 								<p>Copyright &copy;1970.</p>
