add w to picture size

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									the gluten
 									structure has a chance to develop before being disturbed again.</p>
 								<figure>
-									<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960, img/folding-dough-1920w.jpg 1920w"
+									<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960w, img/folding-dough-1920w.jpg 1920w"
 										src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" />
 									<figcaption class="cption">Folding the dough, instead of kneading</figcaption>
 								</figure>
@@ -204,7 +204,7 @@
 									odio quisquam?
 									Doloribus vel ex ab.</p>
 								<figure>
-									<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960, img/proofing-1920w.jpg 1920w"
+									<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960w, img/proofing-1920w.jpg 1920w"
 										src="img/proofing-480w.jpg"
 										alt="Dough dusted with flour, ready to sit and proof" />
 									<figcaption class="cption">Dough dusted with flour, ready to sit and proof
@@ -221,7 +221,7 @@
 									odio quisquam?
 									Doloribus vel ex ab.</p>
 								<figure>
-									<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960, img/baked-baguettes-1920w.jpg 1920w"
+									<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960w, img/baked-baguettes-1920w.jpg 1920w"
 										src="img/baked-baguettes-480w.jpg"
 										alt="Delicious baked bagettes, cut and stacked" />
 									<figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
@@ -300,7 +300,7 @@
 						doloribus,
 						impedit nobis. Quod.</p>
 					<figure>
-						<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960, img/ready-to-eat-1920w.jpg 1920w"
+						<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960w, img/ready-to-eat-1920w.jpg 1920w"
 							src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" />
 						<figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
 					</figure>
