css add auto height picture, html define heigth

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 									structure has a chance to develop before being disturbed again.</p>
 								<figure>
 									<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960w, img/folding-dough-1920w.jpg 1920w"
-										src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading" />
+										src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading"
+										height="321" />
 									<figcaption class="cption">Folding the dough, instead of kneading</figcaption>
 								</figure>
 							</li>
@@ -207,7 +208,7 @@
 								<figure>
 									<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960w, img/proofing-1920w.jpg 1920w"
 										src="img/proofing-480w.jpg"
-										alt="Dough dusted with flour, ready to sit and proof" />
+										alt="Dough dusted with flour, ready to sit and proof" height="321" />
 									<figcaption class="cption">Dough dusted with flour, ready to sit and proof
 									</figcaption>
 								</figure>
@@ -224,7 +225,7 @@
 								<figure>
 									<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960w, img/baked-baguettes-1920w.jpg 1920w"
 										src="img/baked-baguettes-480w.jpg"
-										alt="Delicious baked bagettes, cut and stacked" />
+										alt="Delicious baked bagettes, cut and stacked" height="600" />
 									<figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
 								</figure>
 							</li>
@@ -302,7 +303,8 @@
 						impedit nobis. Quod.</p>
 					<figure>
 						<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960w, img/ready-to-eat-1920w.jpg 1920w"
-							src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share" />
+							src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share"
+							height="600" />
 						<figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
 					</figure>
 					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo, modi
