--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 									odio quisquam?
 									Doloribus vel ex ab.</p>
 								<figure>
-									<img srcset="img/mixing-ingredients-480w.jpg 480w height=" 321",
-										img/mixing-ingredients-960w.jpg 960w height="440" ,
-										img/mixing-ingredients-1920w.jpg 1920w height="1280"" src="
+									<img srcset="img/mixing-ingredients-480w.jpg 480w,
+										img/mixing-ingredients-960w.jpg 960w,
+										img/mixing-ingredients-1920w.jpg 1920w" src="
 										img/mixing-ingredients-480w.jpg" alt="A shaggy dough" height="321" />
 									<figcaption class="cption">A shaggy dough</figcaption>
 								</figure>
