remove html class table caption, add style to caption

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 						perspiciatis. Dolores?</p>
 
 					<!-- schedule table -->
-					<div>
+					<div class="t-table">
 						<table class="tbl-schedule">
 							<thead>
 								<tr>
@@ -289,7 +289,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<caption> <span class="cption">Sample baking schedule </span> </caption>
+						<caption>Sample baking schedule</caption>
 					</div>
 				</section>
 				<!-- result section -->
