changle label for p on toggle

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					<input type="checkbox" class="chbox" id="chbox">
 					<div class="toggle-layout">
 						<label for="chbox" class="toggle">
-							<label class="sw-left">grams</label>
-							<label class="sw-right">lb, oz</label>
+							<p class="sw-left">grams</p>
+							<p class="sw-right">lb, oz</p>
 							<div class="switch"></div>
 						</label>
 					</div>
