add divs to sw-left toggle

--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
 					<input type="checkbox" class="chbox" id="chbox">
 					<div class="toggle-layout">
 						<label for="chbox" class="toggle">
-							<p class="sw-left">grams</p>
-							<p class="sw-right">lb, oz</p>
+							<div class="sw-left">
+								<p>grams</p>
+							</div>
+							<div class="sw-right">
+								<p>lb, oz</p>
+							</div>
 							<div class="switch"></div>
 						</label>
 					</div>
