add span to toggle

--- a/index.html
+++ b/index.html
@@ -115,13 +115,16 @@
 					<input type="checkbox" class="chbox" id="chbox">
 					<div class="toggle-layout">
 						<label for="chbox" class="toggle">
-							<div class="sw-left">
+							<span class="sw-left">grams</span>
+							<span class="sw-right">lb, oz</span>
+							<span class="switch"> </span>
+							<!-- <div class="sw-left">
 								<p>grams</p>
 							</div>
 							<div class="sw-right">
 								<p>lb, oz</p>
 							</div>
-							<div class="switch"></div>
+							<div class="switch"></div> -->
 						</label>
 					</div>
 					<div>
