add go-top button, padding table,

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- top header section -->
 				<section class="mar-bger-section">
 					<a href="./" class="a-f-baking"> Baking</a>
-					<h1 class="main-heading"> Delicious No-Knead Baguettes</h1>
+					<h1 id="m-heading" class="main-heading"> Delicious No-Knead Baguettes</h1>
 					<p class="main-pgraph"> Make three <strong class="white-strong">fluffy and delicious
 							Baguettes</strong>,
 						using
@@ -329,9 +329,13 @@
 						qui
 						recusandae mollitia?</p>
 				</section>
+
 			</div>
 			<!-- footer wraper section -->
 			<footer class="footer bg-theme-section padd-section">
+				<section class="go-top">
+					<a class="a-top" href="#m-heading">Go top</a>
+				</section>
 				<div class="fter-mainparent mar-bger-section">
 					<!-- footer left column -->
 					<div class="fter-mainchild">
