Add media query

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				</ul>
 			</nav>
 			<!-- story section -->
-			<section class="main-content padd-section">
+			<section class="main-content  main-contentA padd-section">
 				<h2 id="Story" class="f-all-topics f-topic">Story</h2>
 				<p class="all-p">Lorem ipsum, <a class="f-yellow" href="">delicious bread</a> dolor sit amet consectetur
 					adipisicing elit.
@@ -151,7 +151,7 @@
 				</section>
 			</div>
 			<!-- process section -->
-			<div class="main-content padd-section">
+			<div class="main-content main-contentB padd-section">
 				<section class="mar-bger-section">
 					<h2 id="Process" class="f-all-topics f-topic">Process</h2>
 					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit amet accusantium
@@ -331,6 +331,8 @@
 				</section>
 
 			</div>
+
+
 			<!-- footer wraper section -->
 			<footer class="footer bg-theme-section padd-section">
 				<section class="go-top">
