Add media query

--- a/index.html
+++ b/index.html
@@ -150,6 +150,187 @@
 					</ul>
 				</section>
 			</div>
+			<!-- process section -->
+			<div class="main-content main-contentB padd-section">
+				<section class="mar-bger-section">
+					<h2 id="Process" class="f-all-topics f-topic">Process</h2>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit amet accusantium
+						officia?
+						Dolore optio
+						inventore non voluptas ex placeat officia omnis? Consequuntur error officiis deleniti, ab odio
+						fugit
+						dolor
+						porro!</p>
+					<div>
+						<!-- process list steps -->
+						<ol class="steps">
+							<li>
+								<h3 class="f-subtopic f-all-topics">Mixing</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/mixing-ingredients-480w.jpg 480w,
+										img/mixing-ingredients-960w.jpg 960w,
+										img/mixing-ingredients-1920w.jpg 1920w" src="img/mixing-ingredients-480w.jpg" alt="A shaggy dough"
+										height="321" />
+									<figcaption class="cption">A shaggy dough</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Folding</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<p class="all-p">Be sure to <em class="bold h-light">let your dough sit for about 20-30
+										minutes
+										between
+										folds</em>, to ensure
+									the gluten
+									structure has a chance to develop before being disturbed again.</p>
+								<figure>
+									<img srcset="img/folding-dough-480w.jpg 480w, img/folding-dough-960w.jpg 960w, img/folding-dough-1920w.jpg 1920w"
+										src="img/folding-dough-480w.jpg" alt="Folding the dough, instead of kneading"
+										height="321" />
+									<figcaption class="cption">Folding the dough, instead of kneading</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Proofing</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/proofing-480w.jpg 480w, img/proofing-960w.jpg 960w, img/proofing-1920w.jpg 1920w"
+										src="img/proofing-480w.jpg"
+										alt="Dough dusted with flour, ready to sit and proof" height="321" />
+									<figcaption class="cption">Dough dusted with flour, ready to sit and proof
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<h3 class="f-subtopic f-all-topics">Baking</h3>
+								<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
+									commodi!
+									Voluptates sit ipsum
+									tenetur modi, voluptatibus quasi assumenda nulla! Expedita obcaecati cumque illo
+									rerum
+									odio quisquam?
+									Doloribus vel ex ab.</p>
+								<figure>
+									<img srcset="img/baked-baguettes-480w.jpg 480w, img/baked-baguettes-960w.jpg 960w, img/baked-baguettes-1920w.jpg 1920w"
+										src="img/baked-baguettes-480w.jpg"
+										alt="Delicious baked bagettes, cut and stacked" height="600" />
+									<figcaption class="cption">Delicious baked bagettes, cut and stacked</figcaption>
+								</figure>
+							</li>
+						</ol>
+					</div>
+				</section>
+				<!-- schedule section -->
+				<section class="mar-bger-section">
+					<h2 id="Schedule" class="f-all-topics f-topic">Schedule</h2>
+					<p class="all-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae repudiandae
+						labore
+						nostrum aspernatur
+						voluptates aliquid totam distinctio aut obcaecati non a nemo nulla, nisi optio veniam
+						consequuntur
+						deserunt
+						perspiciatis. Dolores?</p>
+
+					<!-- schedule table -->
+					<div class="t-table">
+						<table class="tbl-schedule">
+							<thead>
+								<tr>
+									<th class="th-dwn-border" colspan="2">Time</th>
+									<th rowspan="2">Task</th>
+								</tr>
+								<tr>
+									<th>Start</th>
+									<th>Duration</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>0:00</td>
+									<td>(20 <abbr title="Minutes">min</abbr>)</td>
+									<td>Mix ingredients</td>
+								</tr>
+								<tr>
+									<td>0:20</td>
+									<td>(100 <abbr title="Minutes">min</abbr>)</td>
+									<td>Bulk rise</td>
+								</tr>
+								<tr>
+									<td>2:00</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Fold &amp; rest</td>
+								</tr>
+								<tr>
+									<td>2:30</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Fold &amp; rest</td>
+								</tr>
+								<tr>
+									<td>3:00</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Proof</td>
+								</tr>
+								<tr>
+									<td>3:30</td>
+									<td>(30 <abbr title="Minutes">min</abbr>)</td>
+									<td>Bake</td>
+								</tr>
+							</tbody>
+						</table>
+						<caption>Sample baking schedule</caption>
+					</div>
+				</section>
+				<!-- result section -->
+				<section class="mar-bger-section">
+					<h2 id="Result" class="f-all-topics f-topic">Result</h2>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit deleniti debitis
+						dolorum,
+						repellat hic
+						veritatis illo optio soluta, provident tempore perferendis natus quia consectetur libero facere
+						doloribus,
+						impedit nobis. Quod.</p>
+					<figure>
+						<img srcset="img/ready-to-eat-480w.jpg 480w, img/ready-to-eat-960w.jpg 960w, img/ready-to-eat-1920w.jpg 1920w"
+							src="img/ready-to-eat-480w.jpg" alt="Two baguettes, wrapped up and ready to share"
+							height="600" />
+						<figcaption class="cption">Two baguettes, wrapped up and ready to share</figcaption>
+					</figure>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo, modi
+						exercitationem
+						nemo placeat in,
+						enim maxime, repudiandae laboriosam eos mollitia. Temporibus voluptatum cumque sed eveniet
+						assumenda
+						quae a
+						qui!</p>
+					<p class="all-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum accusamus suscipit
+						tempora
+						adipisci quo sunt
+						libero ab nesciunt labore similique dignissimos, tempore assumenda neque quibusdam. Repellat
+						eveniet
+						qui
+						recusandae mollitia?</p>
+				</section>
+
+			</div>
 
 
 			<!-- footer wraper section -->
